--- a/src/banner.less
+++ b/src/banner.less
@@ -49,12 +49,12 @@ ol, ul, li {
 	}
 	.banner-prev-arrow {
 		left: 0;
-		background: url(../../static/images/arrow-left.png) center center no-repeat;
+		background: url(../static/images/arrow-left.png) center center no-repeat;
 		background-size: 50%;
 	}
 	.banner-next-arrow {
 		right: 0;
-		background: url(../../static/images/arrow-right.png) center center no-repeat;
+		background: url(../static/images/arrow-right.png) center center no-repeat;
 		background-size: 50%;
 	}
 }
